@@ -1,6 +1,7 @@
 package icai.dtc.isw.dao;
 
 import icai.dtc.isw.domain.Customer;
+import icai.dtc.isw.utils.Util;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.MockedStatic;
@@ -17,7 +18,7 @@ import static org.mockito.Mockito.*;
 
 class CustomerDAOTest {
 
-    // prueba a encontrar cliente por id en la base de datos
+    //prueba que se construye correctamente un Customer a partir de los datos obtenidos por ID en la base de datos.
     @Test
     void testGetClienteId() throws Exception {
         Connection conn = mock(Connection.class);
@@ -34,13 +35,17 @@ class CustomerDAOTest {
             when(pst.executeQuery()).thenReturn(rs);
 
             when(rs.next()).thenReturn(true, false);
-            when(rs.getString(2)).thenReturn("Maria");
-            when(rs.getString(3)).thenReturn("secreta");
-            when(rs.getString(4)).thenReturn("M");
-            when(rs.getInt(5)).thenReturn(21);
-            when(rs.getArray(6)).thenReturn(sqlArray);
+
+            when(rs.getString("id")).thenReturn("ID123");
+            when(rs.getString("name")).thenReturn("Maria");
+            when(rs.getString("password")).thenReturn("secreta");
+            when(rs.getString("gender")).thenReturn("M");
+            when(rs.getInt("age")).thenReturn(21);
+
+            when(rs.getArray("foodrestriction")).thenReturn(sqlArray);
             when(sqlArray.getArray()).thenReturn(new String[]{"gluten"});
-            when(rs.getString(7)).thenReturn("pescado");
+
+            when(rs.getString("alimentosnocome")).thenReturn("pescado,marisco");
 
             Customer c = CustomerDAO.getClienteId("ID123");
 
@@ -50,15 +55,14 @@ class CustomerDAOTest {
             assertEquals("M", c.getUserGender());
             assertEquals(21, c.getUserAge());
             assertEquals(1, c.getIllegalFood().size());
-            assertEquals("gluten", c.getIllegalFood().getFirst());
-            assertEquals("pescado", c.getAlimentosNoCome());
+            assertEquals("gluten", c.getIllegalFood().get(0));
+            assertEquals(Arrays.asList("pescado", "marisco"), c.getAlimentosNoCome());
 
             verify(pst).setString(1, "ID123");
             verify(pst).executeQuery();
         }
     }
-
-    //prueba seleccionar cliente por id cuando no existe ese cliente
+    //prueba que se devuelva null si el id de cliente no existe.
     @Test
     void testGetClienteIdNotFound() throws Exception {
         Connection conn = mock(Connection.class);
@@ -78,8 +82,7 @@ class CustomerDAOTest {
             verify(pst).setString(1, "NOPE-ID");
         }
     }
-
-    // prueba seleccionar cliente por nombre cuando no existe ese nombre en la base de datos
+    //prueba que se devuelva null si el nombre de cliente no existe.
     @Test
     void testGetClienteNotFound() throws Exception {
         Connection conn = mock(Connection.class);
@@ -100,15 +103,14 @@ class CustomerDAOTest {
         }
     }
 
-    // prueba que dos clientes sean diferentes
+    //prueba que se carga correctamente varios clientes desde la base de datos.
     @Test
-    void testGetDifferentClientes() throws Exception {
+    void testGetClientes() throws Exception {
         Connection conn = mock(Connection.class);
         PreparedStatement pst = mock(PreparedStatement.class);
         ResultSet rs = mock(ResultSet.class);
-
-        Array sqlArray1 = mock(Array.class);
-        Array sqlArray2 = mock(Array.class);
+        Array array1 = mock(Array.class);
+        Array array2 = mock(Array.class);
 
         try (MockedStatic<ConnectionDAO> mocked = mockStatic(ConnectionDAO.class)) {
             ConnectionDAO cdao = mock(ConnectionDAO.class);
@@ -120,16 +122,18 @@ class CustomerDAOTest {
 
             when(rs.next()).thenReturn(true, true, false);
 
-            when(rs.getString(2)).thenReturn("Maria", "Pablo");  // 1ª fila, 2ª fila
-            when(rs.getString(3)).thenReturn("pass1", "pass2");
-            when(rs.getString(4)).thenReturn("M", "H");
-            when(rs.getInt(5)).thenReturn(21, 22);
+            // Fila 1
+            when(rs.getString("id")).thenReturn("ID1", "ID2");
+            when(rs.getString("name")).thenReturn("Maria", "Pablo");
+            when(rs.getString("password")).thenReturn("pass1", "pass2");
+            when(rs.getString("gender")).thenReturn("M", "H");
+            when(rs.getInt("age")).thenReturn(21, 22);
 
-            when(rs.getArray(6)).thenReturn(sqlArray1, sqlArray2);
-            when(sqlArray1.getArray()).thenReturn(new String[]{"gluten"});
-            when(sqlArray2.getArray()).thenReturn(new String[]{"lactosa"});
+            when(rs.getArray("foodrestriction")).thenReturn(array1, array2);
+            when(array1.getArray()).thenReturn(new String[]{"gluten"});
+            when(array2.getArray()).thenReturn(new String[]{"lactosa"});
 
-            when(rs.getString(7)).thenReturn("pescado", "marisco");
+            when(rs.getString("alimentosnocome")).thenReturn("pescado", "marisco");
 
             ArrayList<Customer> lista = new ArrayList<>();
             CustomerDAO.getClientes(lista);
@@ -137,10 +141,10 @@ class CustomerDAOTest {
             assertEquals(2, lista.size());
             assertEquals("Maria", lista.get(0).getUserName());
             assertEquals("Pablo", lista.get(1).getUserName());
+            assertEquals(Arrays.asList("pescado"), lista.get(0).getAlimentosNoCome());
         }
     }
-
-    //prueba insertar un cliente en la tabla
+    //prueba que se añade correctamente un cliente en la base de datos
     @Test
     void testRegisterCliente() throws Exception {
         Connection conn = mock(Connection.class);
@@ -148,6 +152,7 @@ class CustomerDAOTest {
         Array createdArray = mock(Array.class);
 
         try (MockedStatic<ConnectionDAO> mocked = mockStatic(ConnectionDAO.class)) {
+
             ConnectionDAO cdao = mock(ConnectionDAO.class);
             mocked.when(ConnectionDAO::getInstance).thenReturn(cdao);
             when(cdao.getConnection()).thenReturn(conn);
@@ -157,34 +162,36 @@ class CustomerDAOTest {
             )).thenReturn(pst);
 
             when(pst.getConnection()).thenReturn(conn);
-            when(conn.createArrayOf(eq("VARCHAR"), any())).thenReturn(createdArray);
+            when(conn.createArrayOf(eq("varchar"), any())).thenReturn(createdArray);
             when(pst.executeUpdate()).thenReturn(1);
 
             Customer nuevo = new Customer(
-                    "Maria","secreta","M",21,
-                    new ArrayList<>(Arrays.asList("gluten","lactosa")),
-                    "pescado"
+                    "Maria",
+                    "secreta",
+                    "M",
+                    21,
+                    new ArrayList<>(Arrays.asList("gluten", "lactosa")),
+                    new ArrayList<>(Arrays.asList("pescado"))
             );
 
             CustomerDAO.registerCliente(nuevo);
 
-            verify(pst).setString(1, nuevo.getUserId()); // id generado a partir del nombre en el constructor de Customer
+            verify(pst).setString(1, nuevo.getUserId());
             verify(pst).setString(2, "Maria");
             verify(pst).setString(3, "secreta");
             verify(pst).setString(4, "M");
             verify(pst).setInt(5, 21);
 
             ArgumentCaptor<Object[]> cap = ArgumentCaptor.forClass(Object[].class);
-            verify(conn).createArrayOf(eq("VARCHAR"), cap.capture());
-            assertArrayEquals(new Object[]{"gluten","lactosa"}, cap.getValue());
+            verify(conn).createArrayOf(eq("varchar"), cap.capture());
+            assertArrayEquals(new Object[]{"gluten", "lactosa"}, cap.getValue());
 
             verify(pst).setArray(6, createdArray);
-            verify(pst).setString(7, "pescado");
+            verify(pst).setString(7, "pescado"); // listToString(["pescado"])
             verify(pst).executeUpdate();
         }
     }
-
-    //prueba que se puede editar la información del cliente en la base de datos
+    //prueba que se actualiza en la base de datos todos los datos del cliente si se editan.
     @Test
     void testEditCliente() throws Exception {
         Connection conn = mock(Connection.class);
@@ -192,6 +199,7 @@ class CustomerDAOTest {
         Array createdArray = mock(Array.class);
 
         try (MockedStatic<ConnectionDAO> mocked = mockStatic(ConnectionDAO.class)) {
+
             ConnectionDAO cdao = mock(ConnectionDAO.class);
             mocked.when(ConnectionDAO::getInstance).thenReturn(cdao);
             when(cdao.getConnection()).thenReturn(conn);
@@ -201,36 +209,33 @@ class CustomerDAOTest {
             )).thenReturn(pst);
 
             when(pst.getConnection()).thenReturn(conn);
-            when(conn.createArrayOf(eq("VARCHAR"), any())).thenReturn(createdArray);
+            when(conn.createArrayOf(eq("varchar"), any())).thenReturn(createdArray);
             when(pst.executeUpdate()).thenReturn(1);
 
-            // Cliente a editar con id explícito (usamos el setter que tienes)
             Customer editado = new Customer(
-                    "Maria", "nuevaPass", "M", 22,
+                    "ID123",
+                    "Maria",
+                    "nuevaPass",
+                    "M",
+                    22,
                     new ArrayList<>(Arrays.asList("gluten")),
-                    "marisco"
+                    new ArrayList<>(Arrays.asList("marisco"))
             );
-            editado.setUserId("ID123");
 
             CustomerDAO.editCliente(editado);
 
-            // Orden de parámetros según tu SQL en editCliente:
-            // 1:name, 2:password, 3:gender, 4:age, 5:foodrestriction (Array), 6:alimentosnocome, 7:id
             verify(pst).setString(1, "Maria");
             verify(pst).setString(2, "nuevaPass");
             verify(pst).setString(3, "M");
             verify(pst).setInt(4, 22);
-            verify(conn).createArrayOf(eq("VARCHAR"), any());
+            verify(conn).createArrayOf(eq("varchar"), any());
             verify(pst).setArray(5, createdArray);
             verify(pst).setString(6, "marisco");
             verify(pst).setString(7, "ID123");
             verify(pst).executeUpdate();
         }
     }
-
-
-
-
 }
+
 
 
